[project]
name = "bwscan-enhancer"
version = "0.1.0"
description = "Black & White Scan enhancer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "ruff>=0.11.8",
    "scipy>=1.15.2",
]

[tool.ruff]
line-length = 79
